--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,12 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#__next {
+  height: 100%;
+}
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -23,4 +31,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
