--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,29 @@
   height: 100%;
 }
 
+body {
+  background: #0d1118;
+  color: #FFF;
+}
+
+.wolfy-red {
+  background: #ed6a5a;
+}
+
+.wolfy-grey {
+  background: #454851;
+}
+
+nav {
+  box-shadow: 0px 15px 15px -15px #0d1118;
+  position:relative;
+  z-index: 1;
+}
+
+.sidebar-blue {
+  background: #111827;
+}
+
 /* html,
 body {
   padding: 0;
